solve menu spillage smartly instead

--- a/css/style.css
+++ b/css/style.css
@@ -1001,7 +1001,7 @@
 					border: 0;
 					color: #ffffff !important;
 					display: block;
-					padding: 0.85em 0;
+					padding: 0.35em 0;
 					text-decoration: none;
 				}
 
